# Nexus

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml  package-lock.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.planning/: BRIEF.md  ROADMAP.md
benches/results/: README.md
crates/nexus-api/: Cargo.toml
crates/nexus-api/benches/: nexus_bench.rs
crates/nexus-api/src/: auth.rs  lib.rs  middleware.rs
crates/nexus-api/src/routes/: auth.rs  bots.rs  channels.rs  directory.rs  dms.rs  e2ee.rs  emoji.rs  extensibility.rs  federation.rs  files.rs  health.rs  keys.rs  messages.rs  mod.rs  presence.rs  search.rs  servers.rs  slash_commands.rs  threads.rs  uploads.rs  users.rs  verification.rs  voice.rs  webhooks.rs
crates/nexus-common/: Cargo.toml
crates/nexus-common/src/: any_row.rs  auth.rs  config.rs  crypto.rs  error.rs  gateway_event.rs  lib.rs  permissions.rs  snowflake.rs  validation.rs
crates/nexus-common/src/models/: bot.rs  channel.rs  crypto.rs  member.rs  message.rs  mod.rs  plugin.rs  rich.rs  role.rs  server.rs  slash_command.rs  user.rs  webhook.rs
crates/nexus-db/: Cargo.toml
crates/nexus-db/migrations/: 20260218000001_initial_schema.sql  20260218000002_messages_and_chat.sql  20260218000003_rich_features.sql  20260218000004_e2ee.sql  20260218000005_extensibility.sql  20260218000006_federation.sql
crates/nexus-db/migrations-lite/: 20260218000001_initial.sql
crates/nexus-db/src/: any_compat.rs  lib.rs  postgres.rs  redis_pool.rs  search.rs  storage.rs
crates/nexus-db/src/repository/: attachments.rs  bots.rs  channels.rs  emoji.rs  keystore.rs  members.rs  messages.rs  mod.rs  plugins.rs  reactions.rs  read_states.rs  roles.rs  servers.rs  slash_commands.rs  threads.rs  users.rs  webhooks.rs
crates/nexus-desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/nexus-desktop/src/: App.tsx  index.css  invoke.ts  store.ts
crates/nexus-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/nexus-desktop/src-tauri/capabilities/: default.json
crates/nexus-desktop/src-tauri/src/: hotkeys.rs  lib.rs  main.rs  notifications.rs  overlay.rs  state.rs  tray.rs  updater.rs
crates/nexus-desktop/src-tauri/src/commands/: auth.rs  channels.rs  e2ee.rs  messages.rs  mod.rs  presence.rs  servers.rs  settings.rs  voice.rs
crates/nexus-desktop/src/components/: ChannelList.tsx  ChatView.tsx  CreateServerModal.tsx  InviteModal.tsx  JoinServerModal.tsx  MessageInput.tsx  ServerList.tsx  UpdateBanner.tsx  VoiceChannel.tsx
crates/nexus-desktop/src/hooks/: useGateway.ts  usePtt.ts
crates/nexus-desktop/src/pages/: Login.tsx  MainLayout.tsx  Overlay.tsx  Register.tsx  Settings.tsx
crates/nexus-desktop/src/plugins/: PluginLoader.tsx  PluginSandbox.tsx  types.ts
crates/nexus-desktop/src/themes/: ThemeProvider.tsx  ThemeSwitcher.tsx  themes.ts
crates/nexus-federation/: Cargo.toml
crates/nexus-federation/src/: client.rs  discovery.rs  error.rs  key_manager.rs  keys.rs  lib.rs  matrix_bridge.rs  signatures.rs  types.rs
crates/nexus-gateway/: Cargo.toml
crates/nexus-gateway/src/: events.rs  lib.rs  session.rs
crates/nexus-server/: Cargo.toml
crates/nexus-server/src/: main.rs
crates/nexus-voice/: Cargo.toml
crates/nexus-voice/src/: handler.rs  lib.rs  room.rs  sfu.rs  signaling.rs  state.rs
deploy/: docker-compose.prod.yml  fly.toml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
docs/: self-hosting.md  upgrading.md
docs/deployment/: environment-variables.md
scripts/: dev.sh  install.sh  nexus-server.service  stop.sh
tests/load/: auth.js  messages.js
