[package]
name = "nexus-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API layer for Nexus"

[dependencies]
nexus-common = { workspace = true }
nexus-db = { workspace = true }
nexus-voice = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
meilisearch-sdk = { workspace = true }
