[package]
name = "nexus-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, utilities, and configuration for Nexus"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
bitflags = { workspace = true }
snowflaked = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
regex = "1.11"
sha2 = { workspace = true }
base64 = { workspace = true }
