[package]
name = "nexus-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket real-time gateway for Nexus"

[dependencies]
nexus-common = { workspace = true }
nexus-db = { workspace = true }
nexus-api = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
