[package]
name = "nexus-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Main server binary for Nexus — orchestrates all services"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-common = { workspace = true }
nexus-db = { workspace = true }
nexus-api = { workspace = true }
nexus-gateway = { workspace = true }
nexus-voice = { workspace = true }
nexus-federation = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
