[package]
name = "nexus-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Voice/Video WebRTC server for Nexus"

[dependencies]
nexus-common = { workspace = true }
nexus-db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
redis = { workspace = true }

# WebRTC SFU
str0m = { workspace = true }
socket2 = { workspace = true }

# Audio processing
nnnoiseless = { workspace = true }
